--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,7 +8,7 @@
 
 @layer components {
   .btn_navbar {
-    @apply text-slate-100 hover:text-slate-800 hover:bg-zinc-100 hover:rounded-full focus:outline-none focus:text-slate-300 focus:bg-zinc-100 focus:rounded-full;
+    @apply text-slate-100 hover:text-sky-500 hover:bg-zinc-100 hover:rounded-full focus:outline-none focus:text-sky-700 focus:bg-zinc-100 focus:rounded-full;
   }
   .login {
     @apply w-min text-center uppercase px-2 py-1 rounded-lg text-slate-600 bg-slate-100 font-bold text-lg tracking-wide cursor-pointer hover:text-slate-100 focus:ring focus:ring-slate-100 transition-all duration-100;
